# ai-travel-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  TODO.md  ai_travel_agent-commands.txt  debug_places.py  old_api.py  pyproject.toml  run_all.py  run_server.bat  test_api.py  test_tool.py
.github/workflows/: ci.yml
data/: checkpoints.db
frontend/: package-lock.json  package.json
frontend/.next/dev/: prerender-manifest.json  trace
frontend/src/: App.jsx  index.css
frontend/src/components/: AttractionSearch.jsx  BudgetTracker.jsx  ChatPage.jsx  HotelSearch.jsx  RestaurantSearch.jsx  WeatherSearch.jsx
frontend/src/hooks/: usePlanStream.js
frontend/src/services/: api.js
scripts/: benchmark_pdf_generation.py  benchmark_route_optimizer.py  check_env.py  demo_agent.py  demo_agent_w10.py  demo_agent_w13.py  demo_agent_w14.py  demo_agent_w5.py  demo_agent_w8.py  demo_agent_w9.py  demo_budget_optimizer.py  demo_caching.py  demo_flight_search.py  demo_geo_clustering.py  demo_graph_viz.py  demo_hotel_search.py  demo_itinerary_builder.py  demo_map_generator.py  demo_parser.py  demo_pdf_generator.py  demo_route_optimizer.py  test_all_apis.py  test_amadeus.py  test_anthropic.py  test_google_maps.py  test_ollama.py  test_serper.py  test_weather.py  verify_day2_day3.ps1
src/ai_travel_agent/: __init__.py
src/ai_travel_agent/agents/: __init__.py  graph.py  nodes.py  state.py  supervisor.py
src/ai_travel_agent/api/: main.py
src/ai_travel_agent/budget/: budget_optimizer.py
src/ai_travel_agent/evaluation/: judge.py  rubric.py
src/ai_travel_agent/geo/: clustering.py  distance.py  distance_matrix_client.py  geo_clustering.py  geo_visualizer.py
src/ai_travel_agent/maps/: thumbnail_renderer.py  travel_map_generator.py
src/ai_travel_agent/models/: __init__.py  attraction.py  hotel.py  itinerary.py  travel_preferences.py
src/ai_travel_agent/optimizer/: itinerary_builder.py  unified_optimizer.py
src/ai_travel_agent/parsers/: __init__.py  preference_parser.py
src/ai_travel_agent/pdf/: pdf_generator.py  qr_code_generator.py  templates.py  unsplash_client.py
src/ai_travel_agent/route/: optimizer.py  route_optimizer.py
src/ai_travel_agent/services/: conflict_detector.py  conflict_resolver.py  geocode_client.py  ollama_client.py  places_client.py  search_client.py  travel_time_client.py  weather_scheduler.py  weather_scorer.py
src/ai_travel_agent/tools/: __init__.py  attraction_finder.py  base.py  budget_tracker.py  dummy_tool.py  flight_search.py  hotel_search.py  itinerary_builder.py  restaurant_finder.py  weather_checker.py
src/ai_travel_agent/utils/: __init__.py  cache.py  config.py  (+1 more)
src/models/: __init__.py  attraction.py  flight.py  hotel.py  itinerary.py  travel_preferences.py
src/parsers/: preference_parser.py
src/tools/: base.py  dummy_tool.py
src/utils/: cache.py  logger.py
tests/: conftest.py  test_cache.py
tests/evaluation/: baseline_results.csv  dashboard.py  evaluation_report.html  failure_analysis.json  run_baseline.py  scenarios.json
tests/fixtures/: newyork_pois.json  paris_pois.json  tokyo_pois.json
tests/integration/: test_budget_integration.py  test_geo_integration.py  test_graph_integration.py  test_itinerary_integration.py  test_london_trip.py  test_map_integration.py  test_optimizer_scenarios.py  test_pdf_integration.py  test_route_integration.py
tests/unit/: test_attraction_finder.py  test_budget_optimizer.py  test_budget_tracker.py  test_build_budget_node.py  test_build_geo_node.py  test_build_itinerary_node.py  test_build_map_node.py  test_build_pdf_node.py  test_build_route_node.py  test_distance_matrix_client.py  test_flight_search.py  test_geo_clustering.py  test_hotel_search.py  test_itinerary_builder.py  test_nodes.py  test_preference_parser.py  test_qr_code_generator.py  test_restaurant_finder.py  test_route_optimizer.py  test_state.py  test_supervisor.py  test_templates.py  test_thumbnail_renderer.py  test_travel_map_generator.py  test_travel_time_client.py  test_unsplash_client.py  test_weather_checker.py  test_week6_conflicts.py  test_week7_weather.py
tests/week15/: test_backend_w15.py
(+41 files in other folders)
