[project]
name = "ai-travel-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Nishra Gajkandh",email = "nishragajkandh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=1.3.4,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langgraph (>=1.2.4,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiohttp (>=3.14.0,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "hiredis (>=2.3.0,<3.0.0)",
    "fakeredis (>=2.21.0,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "cachetools (>=7.1.4,<8.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "ipython (>=9.14.1,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ai_travel_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ai_travel_agent.utils.cache",
    "ai_travel_agent.tools.base",
    "ai_travel_agent.tools.dummy_tool",
    "ai_travel_agent.tools.flight_search",
    "ai_travel_agent.tools.hotel_search",
    "ai_travel_agent.api.main",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
